--- a/ScratchDraw/ScratchDraw/Base.lproj/Main.storyboard
+++ b/ScratchDraw/ScratchDraw/Base.lproj/Main.storyboard
@@ -60,6 +60,15 @@
                                             <constraint firstAttribute="height" constant="80" id="Op4-5L-Mhn"/>
                                         </constraints>
                                     </view>
+                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Fnr-jE-RVa">
+                                        <rect key="frame" x="70" y="21" width="38" height="30"/>
+                                        <state key="normal" title="Undo">
+                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="undoDraw:" destination="BYZ-38-t0r" eventType="touchUpInside" id="AYf-iK-Lhv"/>
+                                        </connections>
+                                    </button>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
